tests/machine/x/cobol/values_builtin.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T11:45:46Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. VALUES-BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 M.
           05 A PIC 9 VALUE 1.
           05 B PIC 9 VALUE 2.
           05 C PIC 9 VALUE 3.
       01 TMP PIC S9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM FN_VALUES USING M
       DISPLAY FN-VALUES-RES
       STOP RUN.
